# translateLocally

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  MarianInterface.cpp  MarianInterface.h  ModelListItemDelegate.cpp  ModelListItemDelegate.h  ModelListItemWidget.cpp  ModelListItemWidget.h  ModelListItemWidget.ui  ModelManager.cpp  ModelManager.h  Network.cpp  Network.h  README.md  Settings.cpp  Settings.h  TranslatorSettingsDialog.cpp  TranslatorSettingsDialog.h  TranslatorSettingsDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marianinterface.cpp  translateLocally_es_ES.ts  types.h  util.h
.github/workflows/: build.yml  cmake.yml  macos-all.yml  ubuntu-all.yml  ubuntu-latest.yml  windows.yml
cmake/: GetVersionFromFile.cmake  TargetArch.cmake  findLibarchiveCustom.cmake  fix_ruy_build.sh  macdeployqt.cmake
logo/: README.md  logo_svg.h  produce_icns.sh  produce_ico.sh  translateLocally.icns  translateLocally.rc  translateLocally_logo.ai  translateLocally_logo_CMYK_For_Print.ai
scripts/: native_client.py
src/: AlignmentHighlighter.cpp  AlignmentHighlighter.h  AlignmentWorker.cpp  AlignmentWorker.h  CLIParsing.h  ColorWell.cpp  ColorWell.h  CommandLineIface.cpp  CommandLineIface.h  FilterTableView.cpp  FilterTableView.h  MarianInterface.cpp  MarianInterface.h  ModelListItemDelegate.cpp  ModelListItemWidget.h  ModelManager.cpp  ModelManager.h  Network.cpp  Network.h  Promise.h  RepoManager.h  Settings.cpp  Settings.h  Translation.cpp  Translation.h  TranslatorSettingsDialog.cpp  TranslatorSettingsDialog.h  TranslatorSettingsDialog.ui  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.h  version.h.in
src/cli/: CLIParsing.h  CommandLineIface.cpp  CommandLineIface.h  NativeMsgIface.cpp  NativeMsgIface.h  NativeMsgManager.cpp  NativeMsgManager.h  SafeQueue.h
src/inventory/: ModelManager.cpp  ModelManager.h  RepoManager.cpp  RepoManager.h
src/settings/: NewRepoDialog.cpp  NewRepoDialog.h  NewRepoDialog.ui  RepositoryTableModel.cpp  RepositoryTableModel.h  Settings.cpp  Settings.h  TranslatorSettingsDialog.cpp  TranslatorSettingsDialog.h  TranslatorSettingsDialog.ui
